. e Update markdown commit to Arlo v2

--- a/.github/workflows/updateMarkdown.yml
+++ b/.github/workflows/updateMarkdown.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git commit -m "d - Update markdown snippets" -a  || echo "nothing to commit"
+          git commit -m ". d Update markdown snippets" -a  || echo "nothing to commit"
           remote="https://${GITHUB_ACTOR}:${{secrets.GITHUB_TOKEN}}@github.com/${GITHUB_REPOSITORY}.git"
           branch="${GITHUB_REF:11}"
           git push "${remote}" ${branch} || echo "nothing to push"
